# OSi

./: README.md
Libary/: CMakeLists.txt  main.cpp
Libary/DynamicLibary/: CMakeLists.txt  Vectored.cpp  Vectored.h
Libary/StaticLibary/: CMakeLists.txt  Number.cpp  Number.h
